Fixed the extra space on the side. Still have about 1-2 pixel movement on the x, but i removed padding and margin on the col and row classes from bootstrap

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -54,8 +54,5 @@
         overflow: auto;
     }
 
-    .hexagon {
-      
-    }
 
 }
