--- a/css/styles.css
+++ b/css/styles.css
@@ -78,14 +78,14 @@ html {
 .overlay {
     position: absolute;
     top: 15%;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     margin: 0;
     opacity: 50%;
     z-index: -1;
     background-image: url('../images/JTV00342.jpg');
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: initial;
     background-position: center;
 }
 
@@ -197,7 +197,7 @@ html {
     text-align: center;
     font-size: 2rem;
     color: var(--primary-color);
-    padding: 25vh 0 50vh 0;
+    padding: 5% 0 50vh 0;
     width: 100%;
     margin: 0;
     height: 100vh;
@@ -206,7 +206,7 @@ html {
 
 .about-h1 {
     width: 100%;
-    padding: 1vh;
+    padding: 0 0 10vh 0;
     margin: 0 auto;
     text-align: center;
 }
@@ -259,7 +259,7 @@ html {
 }
 
 .skill-p {
-    font-size: 1.5vw;
+    font-size: 1vw;
     width: 100%;
     padding: 8%;
     margin: 1% 10%;
@@ -268,11 +268,10 @@ html {
 /* Work Section */
 
 #work {
-
     text-align: center;
     font-size: 2rem;
     color: var(--primary-color);
-    padding: 25vh 0 50vh 0;
+    padding: 5% 0 50vh 0;
     width: 100%;
     margin: 0;
     height: 100vh;
@@ -282,23 +281,28 @@ html {
 .projects-h1 {
     color: var(--secondary-color);
     width: 100%;
-    padding: 1vh;
+    padding: 1%;
     margin: 0 auto;
     text-align: center;
 }
 
+.row, .col {
+    padding: 0;
+    margin: 0;
+}
 .img-project {
-    background-color: var(--teriary-color);
-    width: auto;
+    width: 90%;
+    padding: 0;
     height: 300px;
-    margin: auto;
+    margin: 0;
+    border-radius: 20px;
 }
 
 #contact {
     text-align: center;
     font-size: 2rem;
     color: var(--primary-color);
-    padding: 25vh 0 50vh 0;
+    padding: 5% 0 50vh 0;
     width: 100%;
     margin: 0;
     height: 100vh;
